--- a/config_dept_client.yml
+++ b/config_dept_client.yml
@@ -15,12 +15,12 @@ spring:
   profiles: dev
   application:
     name: microservicecloud-dept 
-   datasource:
+  datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
     url: jdbc:mysql://localhost:3306/clouddb02             # 数据库名称
     username: root
-    password: 123
+    password: root
     dbcp2:
       min-idle: 5                                           # 数据库连接池的最小维持连接数
       initial-size: 5                                       # 初始化连接数
@@ -60,7 +60,7 @@ spring:
     driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
     url: jdbc:mysql://localhost:3306/clouddb03             # 数据库名称
     username: root
-    password: 123
+    password: root
     dbcp2:
       min-idle: 5                                           # 数据库连接池的最小维持连接数
       initial-size: 5                                       # 初始化连接数
